[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/weapons/hoaming_missile.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/weapons/weapons.sprites/missile_night.tres" type="Texture" id=2]
[ext_resource path="res://assets/sounds/sfx/6_missile.wav" type="AudioStream" id=3]

[node name="hoaming_missile" type="Area2D" groups=[
"bullet",
]]
script = ExtResource( 1 )
attack_power = 13

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -5, -4, -5, 3, 5, 3, 5, -4 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( -6, -0.5 )
lifetime = 0.1
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
spread = 180.0
gravity = Vector2( -20, 0 )
initial_velocity = 22.51

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -17.859
[connection signal="area_entered" from="." to="." method="_on_hoaming_missile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_hoaming_missile_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
